Integrasi BE dengan ML service dan penyesuaian FE
