# backend/src/routes/insights.js
@@ -1,11 +1,13 @@
 import { Router } from 'express'
 import { requireAuth } from '../middlewares/authMiddleware.js'
-import { createOrUpdateInsight, getInsight } from '../controllers/insightsController.js'
+import {
+  createOrUpdateInsight,
+  getInsight
+} from '../controllers/insightsController.js'
 
 const router = Router()
 router.use(requireAuth)
-
-router.get('/users/:userId/insights', getInsight)
-router.post('/users/:userId/insights', createOrUpdateInsight)
+router.get('/developers/:developerId/insights', getInsight)
+router.post('/developers/:developerId/insights', createOrUpdateInsight)
 
 export default router
