# backend/src/routes/metrics.js
@@ -1,11 +1,13 @@
 import { Router } from 'express'
 import { requireAuth } from '../middlewares/authMiddleware.js'
-import { getMetrics, upsertMetrics} from '../controllers/metricsController.js'
+import {
+  getMetrics,
+  upsertMetrics
+} from '../controllers/metricsController.js'
 
 const router = Router()
 router.use(requireAuth)
-
-router.get('/users/:userId/metrics', getMetrics)
-router.put('/users/:userId/metrics', upsertMetrics)
+router.get('/developers/:developerId/metrics', getMetrics)
+router.put('/developers/:developerId/metrics', upsertMetrics)
 
 export default router
